# set-solver

./: .gitignore  CMakeLists.txt  README.md  SetSolver.cpp
set_solver/: Card.cpp  Card.hpp  Color.cpp  Color.hpp  Contours.cpp  Contours.hpp  Image.cpp  Image.hpp  PossibleCards.cpp  PossibleCards.hpp  Utils.cpp  Utils.hpp  main.cpp
